# todocli

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  meson.build
.cache/clangd/index/: allocator.h.C9F0481A2BB981B4.idx  assertions.h.BF36BBC165DFF672.idx  config.h.F49422E1EFDFBF82.idx  forwards.h.898AD82D1AD72058.idx  json.h.3D4DAD6EE176B12F.idx  json_features.h.15F191119ADD429D.idx  json_reader.cpp.4E1480A9591532EB.idx  json_tool.h.1AE9A96427717FA7.idx  json_value.cpp.5CCA4E5742E28ACB.idx  json_valueiterator.inl.6631200E78BA669F.idx  json_writer.cpp.1A6C678C26656AB0.idx  main.cpp.51DB1A74F99E12F9.idx  main.h.A20FDEBDFB5FEA6D.idx  reader.h.840D7E2C123C9E82.idx  value.h.844775DFCA387233.idx  version.h.ADF61B166861A601.idx  writer.h.1B61EE54CB5A18E0.idx
.github/workflows/: main.yml
main.dSYM/Contents/Resources/DWARF/: main
src/: main.cpp  main.h
